DFPL-1600: Add placements non cofidential back and rework logic